// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/AlertBanner should match snapshot 1`] = `
<div
  className="AlertBanner info AlertBanner--sys"
>
  <div
    className="AlertBanner__icon"
  >
    <InformationOutlineIcon
      size={24}
    />
  </div>
  <div
    className="AlertBanner__body"
  >
    <div
      className="AlertBanner__title"
    >
      title
    </div>
    <div
      className="AlertBanner__message"
    >
      message
    </div>
  </div>
</div>
`;

exports[`Components/AlertBanner should match snapshot for app variant 1`] = `
<div
  className="AlertBanner info AlertBanner--app"
>
  <div
    className="AlertBanner__icon"
  >
    <InformationOutlineIcon
      size={24}
    />
  </div>
  <div
    className="AlertBanner__body"
  >
    <div
      className="AlertBanner__title"
    >
      title
    </div>
    <div
      className="AlertBanner__message"
    >
      message
    </div>
  </div>
</div>
`;

exports[`Components/AlertBanner should match snapshot when buttons are passed 1`] = `
<div
  className="AlertBanner info AlertBanner--app"
>
  <div
    className="AlertBanner__body"
  >
    <div
      className="AlertBanner__title"
    >
      title
    </div>
    <div
      className="AlertBanner__message"
    >
      message
    </div>
    <div
      className="AlertBanner__actionButtons"
    >
      <div
        id="actionButtonLeft"
      />
      <div
        id="actionButtonRight"
      />
    </div>
  </div>
</div>
`;

exports[`Components/AlertBanner should match snapshot when icon disabled 1`] = `
<div
  className="AlertBanner info AlertBanner--app"
>
  <div
    className="AlertBanner__body"
  >
    <div
      className="AlertBanner__title"
    >
      title
    </div>
    <div
      className="AlertBanner__message"
    >
      message
    </div>
  </div>
</div>
`;
